2009-03-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Removed debug messages.

2009-03-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: fixed "Bug 482120 - Selection
	  isn't repainted correctly when it's reduced
	  programmatically".

2009-03-04  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* SyntaxModes/CSharpSyntaxMode.xml:
	* SyntaxModes/MakefileSyntaxMode.xml: Added makefile syntax
	  mode.

2009-03-04  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/GapBuffer.cs: Corrected insignificant
	  algortihm glitch in gap buffer.

2009-03-04  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am: fixed makefile.

2009-03-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: fixed "Bug 480308 - Editor
	  not scrolling horizontally".

2009-03-03  Mike Krüger  <mkrueger@novell.com>

	* Styles/TangoLightStyle.xml: Changed diff header style for
	  tango light.

2009-03-03  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* Styles/OblivionStyle.xml:
	* Styles/TangoLightStyle.xml:
	* SyntaxModes/DiffSyntaxMode.xml:
	* Mono.TextEditor.Highlighting/Span.cs:
	* Mono.TextEditor.Highlighting/Style.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Added diff file
	  syntax mode.

2009-03-02  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Worked on horizontal
	  scrolling behavior.

2009-03-02  Mike Krüger  <mkrueger@novell.com>

	* Styles/OblivionStyle.xml: fixed "Bug 480800 - please
	  highlight //TODO items as gedit does in oblivion style"

2009-02-26  Michael Hutchinson  <mhutchinson@novell.com>

	* SyntaxModes/ValaSyntaxMode.xml:
	* SyntaxModes/PythonSyntaxMode.xml:
	* Mono.TextEditor.Highlighting/Span.cs: Remove unused
	  constraint attribute.

	* SyntaxModes/AspNetSyntaxMode.xml: Better highlighting for
	  comments and cdata.

	* SyntaxModes/XmlSyntaxMode.xml: Better highlighting for
	  cdata.
